Explicitly disable scrolling index to fix problem on iPhones

--- a/web/style/index.css
+++ b/web/style/index.css
@@ -3,6 +3,7 @@
 
 body {
     background-color: #1B2EA1;
+    overflow: hidden;
 }
 
 .menuItem {
